==== 10/02/2015

- Possibilité de mettre une plage d'exclusion, ex : "2015-02-12:2015-02-20" pour exlude tous les jour du 12 (inclus) au 20 (inclus) Février 2015
- Un agenda peut servir de regle d'exclusion pour un autre
- Possibilité de programmer un evènement le premier, deuxieme... lundi,mardi... du mois

==== 02/01/2015

- Correction d'un bug si les evenements sont uniquement sur les jours feriés

==== 07/12/2014

- Possibilité de définir le nombre maximum d'évenement à afficher sur le widget

==== 30/11/2014

- Lors de la reactivation d'un agenda si des evenements sont dans la plage alors leurs actions sont executées

==== 23/11/2014

- Possibilité de repeter un evenement toutes les heures/minutes